# cu-obs

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  obs.rs  rpm.rs  workspace.rs
src/cmd/: add.rs  binaries.rs  mod.rs  new.rs  status.rs  unknown.rs
test/: cc-1.0-1.ule3.src.rpm
test/rpmbuild/: cc.spec
