[package]
name = "cu_obs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
curl = "0.4.44"
mktemp = "0.5.0"
regex = { version = "1" }
toml = { version = "0" }
